[gd_scene load_steps=4 format=3 uid="uid://bgfpoojsb71m1"]

[ext_resource type="PackedScene" uid="uid://jyygla0roy1h" path="res://UIObjects/UIMenuMaster.tscn" id="1_hmpp4"]
[ext_resource type="Script" path="res://UIObjects/MenuUI/GameOverMenuMaster.gd" id="2_ktvm7"]
[ext_resource type="PackedScene" uid="uid://ljgtv66x0b7h" path="res://UIObjects/MenuUI/GameOverMenu.tscn" id="3_j1srd"]

[node name="GameOverMenuMaster" instance=ExtResource("1_hmpp4")]
script = ExtResource("2_ktvm7")

[node name="GameOverMenu" parent="." index="0" instance=ExtResource("3_j1srd")]

[connection signal="return_to_hub" from="GameOverMenu" to="." method="_on_return_to_hub_button_pressed"]
